# burro

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: alignments.bur  columns.bur  comments.bur  dashes.bur  demo.bur  example.bur  fontmap  fonts.bur  leading.bur  margins.bur  midline_margins.bur  midline_params.bur  multi-page.bur  nested.bur  newline.bur  no_ligatures.bur  positioning.bur  pt_size.bur  quotes.bur  reset.bur  rules.bur  simple.bur  stripped.bur  syntax.bur  tabs-columns.bur  tabs.bur  text.bur  title.bur  website.bur  words.bur  wrapping.bur
src/: alignment.rs  error.rs  fontmap.rs  fonts.rs  layout.rs  lexer.rs  lib.rs  literals.rs  main.rs  parser.rs  tab.rs  util.rs  writer.rs
src/parser/: doc_config.rs  error.rs  mod.rs  tokenizer.rs  units.rs
