[package]
name = "burro"
version = "0.1.0"
authors = ["Michael Rees <mrees@noeontheend.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
assert_float_eq = "1.1.3"
bitflags = "1.3.2"
gumdrop = "0.8.1"
lazy_static = "1.4.0"
log = "0.4"
regex = "1.7.1"
rustybuzz = "0.6.0"
printpdf = "0.5.2"
serde = { version = "1.0.152", features = ["derive"] }
simplelog = "0.5"
thiserror = "1.0.38"
toml = "0.6.0"
unicode-segmentation = "1.9.0"
